@@ -139,6 +139,7 @@ typedef enum {
   TOK_SITE_RUSAGE,
   TOK_SITE_SAVECFG,
   TOK_SITE_SECTIONS,
+  TOK_SITE_SHOWLOG,
   TOK_SITE_SHUTDOWN,
   TOK_SITE_SWHO,
   TOK_SITE_SU,
